--- a/public/index.html
+++ b/public/index.html
@@ -26,9 +26,15 @@
     -->
     <title>React App</title>
   </head>
-  <body>
+  <body style="background-color: #F3F3F3; ">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="header"></div>
+
+    <div style="display: flex;">
+      <div id="root"></div>
+      <div id="sidebar"></div>
+    </div>
+
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
